--- a/MFCTransition/MFCTransition.vcxproj.filters
+++ b/MFCTransition/MFCTransition.vcxproj.filters
@@ -95,5 +95,35 @@
     <Image Include="res\MFCTransition.ico">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="..\bin\images\图片1.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\关闭.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\缩小.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\关闭N.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\缩小N.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\触发关闭.png">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\按下.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\默认.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\重启工作.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\重启默认.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
