--- a/MFCTransition/MFCTransition.vcxproj.filters
+++ b/MFCTransition/MFCTransition.vcxproj.filters
@@ -95,9 +95,6 @@
     <Image Include="res\MFCTransition.ico">
       <Filter>资源文件</Filter>
     </Image>
-    <Image Include="..\bin\images\图片1.bmp">
-      <Filter>资源文件</Filter>
-    </Image>
     <Image Include="..\bin\images\关闭.bmp">
       <Filter>资源文件</Filter>
     </Image>
@@ -110,9 +107,6 @@
     <Image Include="..\bin\images\缩小N.bmp">
       <Filter>资源文件</Filter>
     </Image>
-    <Image Include="..\bin\images\触发关闭.png">
-      <Filter>资源文件</Filter>
-    </Image>
     <Image Include="..\bin\images\按下.bmp">
       <Filter>资源文件</Filter>
     </Image>
@@ -123,6 +117,9 @@
       <Filter>资源文件</Filter>
     </Image>
     <Image Include="..\bin\images\重启默认.bmp">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="..\bin\images\背景.bmp">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
