--- a/MFCTransition/MFCTransition.vcxproj.filters
+++ b/MFCTransition/MFCTransition.vcxproj.filters
@@ -161,5 +161,8 @@
     <Image Include="res\scrollbar.bmp">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="res\icon1.ico">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
